--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/training-projects/apollo/issues"
   },
-  "homepage": "https://github.com/training-projects/apollo#readme"
+  "homepage": "https://github.com/training-projects/apollo#readme",
+  "devDependencies": {
+    "autoprefixer-stylus": "^0.11.0",
+    "browser-sync": "^2.17.3",
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-jade": "^1.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-stylus": "^2.5.0",
+    "gulp-uglify": "^2.0.0"
+  }
 }
